--- a/components/Carousel/Carousel.less
+++ b/components/Carousel/Carousel.less
@@ -29,6 +29,7 @@
     top: 50%; 
     left: 25px;
     transform: translate(0, -50%);
+    z-index: 20;
   }
   .right-button {
     top: 50%; 
